--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -12,7 +12,7 @@
 
 .cards__list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(3, minmax(400px, 1fr));
   list-style-type: none;
   width: auto;
   gap: 16px;
@@ -48,14 +48,25 @@
   opacity: 0.9;
   background-color: #e8e8e8;
 }
-
+@media screen and (max-width: 1240px) {
+  .cards__list {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
+    list-style-type: none;
+    width: auto;
+    gap: 16px;
+    padding-bottom: 64px;
+    padding-left: 0;
+    justify-items: center;
+  }
+}
 @media screen and (max-width: 1024px) {
   .cards__block {
     padding-left: 16px;
     padding-right: 16px;
   }
   .cards__list {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
     gap: 8px;
     padding-bottom: 32px;
   }
